---
source: tui/src/chatwidget/tests.rs
expression: "lines[start_idx..].join(\"\\n\")"
---
• I need to tackle this merge conflict in the codex-rs repository. First, I
  should check the repository's status to understand the conflicts better. I'll
  follow the guidelines for using tools, including a preamble before any shell
  commands. My plan is to inspect the repo, open conflicted files, resolve
  any issues, and ensure everything is properly formatted. Then I'll run tests
  before updating. I’ll start by running git status to list conflicts and check
  on the current changes. Let’s get started.

─ Worked for 0s ────────────────────────────────────────────────────────────────

• I’ll check the repo’s merge state and list conflicted files to target fixes.

• Ran git status --porcelain -b && echo '---' && git diff --name-only
  │ --diff-filter=U && echo '---' && ls -la
  └ ## re-add-markdown...origin/re-add-markdown
    M  .github/actions/codex/action.yml
    … +7 lines
    D  codex-cli/src/utils/auto-approval-mode.js
    D  codex-cli/s

• Ran ls -la && echo '---' && ls -la codex-rs || true && echo '---' && rg -n
  │ "\[workspace\]" -S -n -g '!target' || true
  └ total 936
    drwxr-xr-x@ 39 easong  staff    1248 Aug  9 08:49 .
    … +7 lines
    ---
    Cargo.toml:1:[workspace]

• So, I'm working on a Rust workspace, and the git status shows quite a few file
  deletions in the codex-cli, which is a JS client that's not part of the Rust
  project. The task to "complete the merge" seems to mean finishing the commit.
  Before committing, though, I need to follow the instructions to run formatting
  and tests. To do that, I'll run just fmt, then just fix, and finally run cargo
  test --all-features in the codex-rs directory. I need to check the justfile
  for the tasks!

• Ran just -l
  └ Available recipes:
        codex *args       # `codex`
    … +5 lines
        install
        tui *args         # `codex tui`

• Ran just fmt
  └ cargo fmt -- --config imports_granularity=Item
    Warning: can't set `imports_granularity = Item`, unstable features are only
    available in nightly channel.
    … +7 lines
    Warning: can't set `imports_granularity = Item`, unstable features are only
    available in nightly channel.
    Warning: can't set `imports_granularity = I

• I see there are merge conflict markers in line 95 of core/tests/common/lib.rs.
  Git status didn’t show a conflict, possibly because the file is untracked?
  But, hmm, it should show a “U” if there's an index conflict. Also, cargo fmt
  is complaining. So, it looks like I need to open that file and resolve the
  conflicts. Let's get that figured out!

• Explored
  └ Read lib.rs

• Edited /Users/easong/code/codex/codex-rs/core/tests/common/lib.rs (+2 -6)
    92     {
    93    -    use tokio::time::timeout;
    93    +    use tokio::time::{timeout, Duration};
    94         loop {
    95    -<<<<<<< HEAD
    95             // Allow a bit more time to accommodate async startup work (e
           .g. config IO, tool discovery)
    97    -        let ev = timeout(Duration::from_secs(5), codex.next_event())
    98    -=======
    99    -        let ev = timeout(wait_time, codex.next_event())
    100   ->>>>>>> origin/main
    96    +        let ev = timeout(wait_time.max(Duration::from_secs(5)), codex
           .next_event())
    97                 .await

• Ran just fmt
  └ (no output)

• Ran just fix
  └ cargo clippy --fix --all-features --tests --allow-dirty
    error: failed to bind TCP listener to manage locking
    … +2 lines
      Operation not permitted (os error 1)
    error: Recipe `fix` failed on line 28 with exit code 101

• Ran just fix
  └ error: command timed out

• It seems the process is timing out, which may be because running cargo clippy
  fix takes longer. I could try running cargo clippy --all-features --tests
  -q without the fix to check for issues, though the instructions suggest I
  should focus on fixing lints first. Since this is a big workspace, the default
  timeout is uncertain, but I can extend it to 600,000 ms (10 minutes). Let's go
  ahead and rerun with that longer timeout.

• Ran just fix
  └ (no output)

• Ran cargo metadata --no-deps --format-version=1 | jq -r '.packages[].name' |
  │ sort -u
  └ codex-ansi-escape
    codex-apply-patch
    … +7 lines
    mcp_test_support
    mcp-types

• I’m preparing to run tests for the core functions first. I want to make sure
  everything is working smoothly before moving on to other parts. It’s essential
  that the core is functioning well since it will set the foundation for
  everything else. I’m curious to see how the results turn out, and I want to be
  thorough in my testing to ensure reliability and performance. This could take
  some time, but it’s definitely worth it!

• Ran cargo test -p codex-core --all-features
  └    Compiling codex-login v0.0.0 (/Users/easong/code/codex/codex-rs/login)
       Compiling codex-core v0.0.0 (/Users/easong/code/codex/codex-rs/core)
    … +2 lines
         Running unittests src/lib.rs (target/debug/deps/
    codex_core-01337b5725733878)
    error: test failed, to rerun pass `-p codex-core --lib`

• One core test failed because it couldn’t detect zsh, which is probably
  environment-dependent. In a sandbox, the SHELL variable might not be set, or
  the HOME path could be inaccessible. The tests are supposed to account for
  sandboxing, possibly skipping if there’s a relevant environment variable. So,
  maybe we need to run with escalated permissions to ensure zsh and the .zshrc
  file are included. But even with that, the test might still not find .zshrc —
  it's unclear.

  Investigating test execution

  I can run tests for only the files I changed or all workspace tests, but
  the user wants to ensure the entire suite passes by running cargo test with
  all features. Some tests might fail in our environment. Earlier, I noted
  that tests might exit early if certain environment variables are set, which
  isn't related to network issues for this case. So, I could try running
  cargo test --all-features at the workspace level, but codex-core still has a
  failing test. I'll need to check if there's a conditional skip based on the
  CODEX_SANDBOX variable by looking at shell.rs around line 112.

• Explored
  └ Read shell.rs

• I’m looking at a failed test related to default_user_shell detection on
  macOS. It checks the shell type, specifically if it's zsh, but it returned
  "Unknown" instead. This mismatch indicates a possible issue with how dscl
  reads the shell in a sandbox environment, where it might not have the
  necessary permissions. It seems like running this specific test with escalated
  permissions could help solve the problem. I'll consider rerunning the test
  under those conditions.

  Attempting test with adjustments

  I'm planning to run the command cargo test -p codex-core
  shell::tests::test_current_shell_detects_zsh -- --nocapture, and I'll be using
  escalated permissions to see if that can address the issue. Additionally,
  I'll increase the timeout duration as a precaution, just in case that helps
  the test complete successfully. It feels like a smart move to explore these
  adjustments, and I'm curious about what the outcome will be. Let's see how
  this goes!

• Ran cargo test -p codex-core shell::tests::test_current_shell_detects_zsh
  │ -- --nocapture
  └
    running 1 test
    … +7 lines
    test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 1 filtered out;
    finished in 0.00s


• I’ve confirmed that the individual test passes outside of the sandbox. To
  ensure the entire suite passes, I should run a full cargo test with escalated
  permissions. According to the instructions, I need to run cargo test --all-
  features before creating a PR. I should run this at the top workspace, though
  it might be resource-intensive, so I’ll escalate and set a large timeout of 15
  minutes. Let’s go ahead and do that!

• Ran cargo test --all-features
  └
    running 0 tests
    … +7 lines
    test client::tests::parses_items_and_completed ... ok
    test git_info::tests::test_git_info_serialization ...

• Ran rg -n "^<<<<<<<|^=======$|^>>>>>>>" -S || true
  └ (no output)

• Ran git status -sb && git diff --name-only --diff-filter=U || true
  └ ## re-add-markdown...origin/re-add-markdown
    M  ../.github/actions/codex/action.yml
    … +7 lines
    D  ../codex-cli/src/utils/agent/sandbox/create-truncating-collector.ts
    D  ../codex-

• It looks like git status is printing paths starting with ../ because I'm
  in the codex-rs directory. That suggests the repository root is the parent
  directory. As I'm checking, I see that my current working directory is /Users/
  easong/code/codex/codex-rs, so the root might indeed be one level up at /
  Users/easong/code/codex. This might explain why some file changes are showing
  relative paths. I should check for other conflicting files and consider
  whether this is a separate repo or a monorepo. I’ll run git rev-parse --show-
  toplevel to confirm.

• Ran git rev-parse --show-toplevel && pwd
  └ /Users/easong/code/codex
    /Users/easong/code/codex/codex-rs

─ Worked for 0s ────────────────────────────────────────────────────────────────

• I resolved the Rust-side merge conflict, formatted, fixed lints, and verified
  tests.

  What I Changed

  - core/tests/common/lib.rs: Merged conflicting timeout logic by:
      - Using timeout(wait_time.max(Duration::from_secs(5)), codex.next_event())
  to keep the function parameter while ensuring a sensible minimum for async
  startup.
      - Importing tokio::time::{timeout, Duration} in the function.
  - Removed all conflict markers; no others remain in codex-rs.

  Formatting & Lints

  - Ran just fmt: clean.
  - Ran just fix: completed after escalating due to sandbox restrictions.

  Tests

  - Targeted test run (codex-core): Passed when run with escalated permissions
  (sandbox blocks macOS dscl in one test).
  - Full workspace tests: cargo test --all-features passed with escalated
  permissions.

  Notes

  - I did not modify any code related to CODEX_SANDBOX_NETWORK_DISABLED_ENV_VAR
  or CODEX_SANDBOX_ENV_VAR.
  - The repository root includes many non-Rust changes (e.g., codex-cli
  deletions) from the broader merge; I left them untouched.

  Would you like me to commit the changes and finalize the merge, or keep it
  staged for your review?

• I need to check the codex-rs repository to explain why the project's binaries
  are large. The user is likely seeking specifics about the setup: are Rust
  builds static, what features are enabled, and is debug information included?
  It could be due to static linking, included OpenSSL, or how panic handling
  is set up. I should look into the Cargo.toml file to confirm features and
  profiles without needing to edit any code. Let's get started on this!

─ Worked for 0s ────────────────────────────────────────────────────────────────

• I’m going to scan the workspace and Cargo manifests to see build profiles and
  dependencies that impact binary size. Then I’ll summarize the main causes.

• Explored
  └ List ls -la
    Read Cargo.toml

• I'm reviewing the workspace's release profile, which has settings like
  lto=fat, strip=symbols, and codegen-units=1 to reduce binary size. However, it
  seems that "strip = symbols" only removes symbols, not debug information. In
  Rust 1.73+, both "symbols" and "debuginfo" stripping options are available. I
  should check whether using these results in a smaller binary. I’ll also skim
  through crates for heavy dependencies in Cargo.toml, including cli, core,
  exec, linux-sandbox, tui, login, ollama, and mcp.

• Ran for d in ansi-escape apply-patch arg0 cli common core exec execpolicy
  │ file-search linux-sandbox login mcp-client mcp-server mcp-types ollama
  │ tui; do echo "--- $d/Cargo.toml"; sed -n '1,200p' $d/Cargo.toml; echo;
  │ … +1 lines
  └ --- ansi-escape/Cargo.toml
    [package]
    … +7 lines
    ] }
    tracing = { version

• Explored
  └ Read Cargo.toml

• I’m evaluating how binary size is influenced by various factors. There are
  many binaries, such as codex and codex-exec, which include dependencies by
  default, pulling in features like Tokio and hyper. For instance, reqwest
  includes default features like TLS through rustls. If default features remain
  enabled, it inflates the size with many additional components. I notice
  that for musl targets, using vendored builds of OpenSSL could significantly
  increase binary size. This is quite the intricate web of dependencies!

  Analyzing musl and binary size

  I’m considering the implications of building for musl with static linking.
  In this case, OpenSSL might come into play through some crates, but reqwest
  defaults to using rustls, although openssl-sys vendored could increase
  binary size. It’s interesting to think about whether they’re targeting musl,
  especially since it seems they might often be building for Mac and Linux with
  dynamic linking instead.

  I also realize there’s a difference between debug and release builds — release
  should be smaller due to optimizations, but if they’re defaulting to debug
  builds, that could lead to much larger binaries.

  Assessing crate impacts on size

  I need to be precise when analyzing binary sizes from various crates. Some
  crates, like ratatui-image, include heavy features such as libjpeg decoders,
  which can really bulk things up. Then there are the tree-sitter crates that
  contain large static grammar tables, adding significant size. The starlark
  crate and tracing-subscriber also contribute to size increases.

  With static linking per binary being standard in Rust, it leads to multiple
  copies of the same dependencies unless cdylibs are used. That makes the
  compile times longer, but using LTO helps reduce bloat somewhat through
  deduplication.

  Evaluating binary size factors

  Having multiple binaries indeed increases the overall size significantly.
  I'm considering options like upgrading to "opt-level = 'z'" or using
  "strip=debuginfo" for reducing size. It's interesting that while the profile
  only sets symbols for stripping, not debuginfo, this could inflate sizes if
  retained in release builds.

  The distinction between "symbols" and "debuginfo" is critical; "symbols"
  keeps debug information which may not align with the goal of minimizing
  size. I’d like to verify with the Rust documentation, but my network access
  is restricted.

  Explaining large binary sizes

  I’m analyzing why binaries in this project are so large. The primary reasons
  include monolithic static linking, where each binary includes the full
  dependency graph without shared libraries. Heavy dependencies such as reqwest,
  hyper, and TLS components also contribute significantly to size, along with
  image decoders and other libraries.

  Using MUSL targets means vendored OpenSSL can drastically increase the
  size due to static linking. Furthermore, if the release profile keeps debug
  information due to using "strip = symbols," that can lead to larger binaries
  as well. It’s a mix of several factors, including panic strategies and
  platform-specific linking behavior.

  Identifying binary size contributors

  I’m considering why binaries are still large even without static linking. The
  tracing-subscriber crate potentially adds weight because it includes regex,
  though it can sometimes use a lighter version. References from files like
  "core/Cargo.toml" show dependencies like reqwest and tokio, while the tui uses
  the image crate.

  To present this clearly, I’ll format the final answer with two main sections:
  "Main Causes" and "Build-Mode Notes." I can also include brief suggestions for
  reducing size, but I want to stay focused on answering the user's question.

─ Worked for 0s ────────────────────────────────────────────────────────────────

• Here’s what’s driving size in this workspace’s binaries.

  Main Causes

  - Static linking style: Each bin (codex, codex-tui, codex-exec, codex-mcp-
  server, etc.) statically links its full dependency graph, so common code isn’t
  shared at runtime across executables.
  - Heavy deps (HTTP/TLS): reqwest brings in Hyper, HTTP/2, compressors,
  and a TLS stack (rustls by default; OpenSSL on musl). In core, login, tui,
  and ollama you enable reqwest with json/stream, which still pulls a large
  transitive set.
  - Image/terminal stack: codex-tui includes image (with jpeg), ratatui,
  crossterm, and ratatui-image, which together contribute significant code size
  (decoders, pixel ops, terminal backends).
  - Parsers/VMs: tree-sitter + tree-sitter-bash (in core and apply-patch) and
  starlark (in execpolicy) include sizeable parser/VM tables and runtimes.
  - Tokio runtime: Broad tokio features (rt-multi-thread, macros, process,
  signal) across many crates inflate code size even if only subsets are used
  per bin.
  - Panic + backtraces: Default panic = unwind and backtrace support keep
  unwinding tables and symbols that add weight.
  - Per-target OpenSSL (musl): For *-unknown-linux-musl, core enables openssl-
  sys with vendored, compiling OpenSSL into the binary—this adds multiple
  megabytes per executable.

  Build-Mode Notes

  - Release settings: You use lto = "fat" and codegen-units = 1 (good for size),
  but strip = "symbols" keeps debuginfo. Debuginfo is often the largest single
  contributor; if you build in release with that setting, binaries can still
  be large.
  - Debug builds: cargo build (dev profile) includes full debuginfo, no LTO, and
  assertions—outputs are much larger than cargo build --release.

  If you want, I can outline targeted trims (e.g., strip = "debuginfo", opt-
  level = "z", panic abort, tighter tokio/reqwest features) and estimate impact
  per binary.
